--- a/src/app/auth/login-page/login-page.component.html
+++ b/src/app/auth/login-page/login-page.component.html
@@ -1,6 +1,13 @@
 <div>Login</div>
 
 <div class="content">
+
+  <form>
+    <!-- <mat-form-field>
+      <mat-label>Input</mat-label>
+      <input matInput>
+    </mat-form-field> -->
+  </form>
   <button (click)="login(sampleProfile)">Log in</button>
 </div>
 
