--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,31 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.page-gradient {
+  --padding-offset: var(--lns-space-xlarge);
+  position: relative;
+  top: 0;
+  z-index: 0;
+}
+.page-gradient::before {
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+  background-image: radial-gradient(
+      circle at top right,
+      #b2e0f1,
+      #fff 42%,
+      #0000 0
+    ),
+    radial-gradient(circle at bottom left, #e1c1de, #fff 42%, #0000 0);
+}
+.page-pageLayout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
