add portal actions buttons + vocab list container ui

--- a/src/app/components/features/vocabulary-list/vocabulary-list.component.html
+++ b/src/app/components/features/vocabulary-list/vocabulary-list.component.html
@@ -1,3 +1,14 @@
+<ng-container *cdkPortal>
+  <div class="btns-group">
+    <button class="action-btn" (click)="goToMainPage()" color="common" mat-raised-button>Home <mat-icon
+        aria-hidden="false" aria-label="Home" fontIcon="home"></mat-icon>
+    </button>
+    <button class="action-btn" mat-raised-button><mat-icon aria-hidden="false"
+        aria-label="Create a new vocabulary list">playlist_add</mat-icon> Create a new list</button>
+  </div>
+</ng-container>
+
+
 <div class="vocab-list-container">
   <div class="vocab-list">
 
